--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -4,11 +4,16 @@ html, body
     margin: 0
     padding: 0
 
-.desktop-nav
+body
+    font-family: 'Roboto'   
+    font-weight: 300 
+
+nav
     width: 100vw
+    max-height: 80px
     height: 80px
-    position: relative
-    &::after
+    position: absolute
+    &::before
         content: ''
         background-color: $secondColor
         position: absolute
@@ -16,15 +21,46 @@ html, body
         top: 0
         width: 100%
         height: 20px
-        // background-color: $secondColor
-    &::before
-        content: ''
+
+.vlinesmall
+    position: relative
+    background-color: #808080
+    width: 20px
+    height: 60px
+    background-color: #808080
+    -webkit-transform: translate(0, 0)
+    transform: translate(0, 0)
+
+.desktop-nav
+    width: 100%
+    display: flex
+    flex-direction: row
+    justify-content: center
+    ul
+        display: flex
+        flex-direction: row
+        gap: 40px
+        padding: 0
+        margin: 0
+        align-items: center
+        li
+            list-style-type: none
+            text-transform: uppercase
+
+
+.mobile-nav
+    .vlinesmall
         position: absolute
-        background-color: $secondColor
         left: 50%
         top: 0
-        width: 20px
-        height: 80px
-        // background-color: $secondColor
-        background-color: $thirdColor
-        transform: translate(-50%, -50%)
+        transform: translateX(-50%)
+    ul
+        padding: 0
+        margin: 0
+        position: fixed
+        width: 70%
+        min-width: 300px
+        height: calc(100vh - 80px)
+        right: 0
+        bottom: 0
+        background-color: $secondColor
