--- a/styles/services.module.sass
+++ b/styles/services.module.sass
@@ -5,11 +5,13 @@
     justify-content: center
     align-items: center
     position: relative
+    padding: 20px
 
 .servicesList
     display: flex
     flex-direction: column
 .servicesListCard
+    max-width: 680px
     p
         margin: 16px 0 0 0
     button
