--- a/styles/brief.module.sass
+++ b/styles/brief.module.sass
@@ -1,10 +1,123 @@
+
 .briefForm
-    max-width: 100%
+    position: relative
     display: flex
     flex-direction: column
-    div
-        display: flex
-        flex-direction: column
+    padding: 20px
+    width: calc(100% - 40px)
+    max-width: 540px
+    button
+        margin-top: 30px
+
+.briefFormContactInfo, .companyinfo
+    display: flex
+    flex-direction: column
+    h3
+        margin-bottom: 20px
+.inputField
+    position: relative
+    width: 100%
+    height: 50px
+    box-sizing: border-box
+    label
+        position: absolute
+        width: 100%
+        top: 0
+        left: 0
+        padding: 10px
+        transition: .2s ease-in
+    input
+        padding: 10px
+        border: none
+        outline: none
+        background: transparent
+        position: relative
+        transition: .1s
+        color: #383838
+        border-bottom: 3ps solid rgba(0,0,0,0)
+        &:focus
+            border-bottom: 2px solid rgba(0,0,0,.5)
+        &:focus ~ label
+            top: -15px
+            font-size: 0.5rem
+        &:valid  ~ label
+            top: -15px
+            font-size: 0.5rem
+
+.companyinfo, .competitors, .customer, .accent, .requirement, .another
+    display: flex
+    flex-direction: column
+    textarea
+        background: transparent
+        border: none
+        transition: .3s
+        color: #808080
+        font-size: 1rem
+        &:focus
+            // font-size: 1.5rem
+            outline: none
+            border-bottom: 3px solid #808080
+            // padding: 10px
+    textarea
+        resize: none
+        height: 50px
+        max-height: 500px
+        font-size: 0.6rem
+
+
+        // &:invalid
+        //     outline: 0
+        // &:focus, &:valid
+        //     border-color: #00dd22
+        // &:focus~label, &:valid~label
+        //     font-size: 14px
+        //     top: -24px
+        //     color: #00dd22
+
+        // &:focus
+        //     border-bottom: 3px solid #808080
+        // &:focus ~ label
+        //     top: -20px
+        //     font-size: 0.5rem
+        // &:invalid ~ label
+        //     top: -20px
+        //     font-size: 0.5rem
+        // &:valid ~ label
+        // &:invalid
+        //     top: 0
+
+// .briefForm
+//     width: 100%
+//     max-width: 340px
+//     display: flex
+//     flex-direction: column
+//     padding: 20px
+//     div
+//         display: flex
+//         flex-direction: column
+//         gap: 20px
+//     label
+//         transform: translateY(40px)
+//     input:focus ~ label
+//         transform: translateY(0px)
+//     // input:valid ~ label
+//     //     transform: translateY(10px)
+//     input, textarea
+//         background: transparent
+//         border: none
+//         transition: .3s
+//         color: #808080
+//         font-size: 1rem
+//         &:focus
+//             // font-size: 1.5rem
+//             outline: none
+//             border-bottom: 3px solid #808080
+//             // padding: 10px
+//     textarea
+//         resize: none
+//         height: 50px
+//         max-height: 500px
+//         font-size: 0.6rem
 
 .smalltext
     font-size: 0.6em
