--- a/styles/home.module.sass
+++ b/styles/home.module.sass
@@ -1,19 +1,48 @@
+.home
+    width: 100%
+    display: flex
+    justify-content: center
 .centered
-    position: absolute
     display: flex
     flex-direction: column
     justify-content: center
     align-items: center
-    left: 50%
-    top: 50%
-    transform: translate(-50%,-50%) scale(0.5)
+    max-width: 300px
+    margin-top: 20px
+    text-align: center
     h1
-        // min-width: 300px
-        font-size: 2.2rem
-        line-height: 1
-        white-space: nowrap
-        text-align: center
-        margin: 20px 0 0 0
-    span
+        margin-top: 20px
         font-size: 1.5rem
-        margin-bottom: 20px
+        line-height: 1
+        color: #000
+    span
+        margin-top: 5px
+        font-size: 0.8rem
+.image
+    width: 150px
+    height: 150px
+    position: relative
+
+.contactIcons
+    margin-top: 20px
+
+
+// .centered
+//     position: absolute
+//     display: flex
+//     flex-direction: column
+//     justify-content: center
+//     align-items: center
+//     left: 50%
+//     top: 50%
+//     transform: translate(-50%,-50%) scale(0.5)
+//     h1
+//         // min-width: 300px
+//         font-size: 2.2rem
+//         line-height: 1
+//         white-space: nowrap
+//         text-align: center
+//         margin: 20px 0 0 0
+//     span
+//         font-size: 1.5rem
+//         margin-bottom: 20px
