--- a/styles/blog.module.sass
+++ b/styles/blog.module.sass
@@ -18,7 +18,9 @@
     align-items: center
     gap: 20px
     
-    
+.created_ad
+    text-align: right
+
 .post
     cursor: pointer
     display: flex
