--- a/styles/globals.sass
+++ b/styles/globals.sass
@@ -361,3 +361,20 @@ button
 .contact-icons
     display: flex
     gap: 5px
+
+
+
+.modalFulscreenImage
+    position: fixed
+    top: 0
+    left: 0
+    background: rgba(0,0,0,0.8)
+    display: flex
+    flex-direction: column
+    justify-content: center
+    align-items: center
+    
+    .button-close
+        margin: 20px 0
+    img
+        margin: auto
