--- a/styles/resume.module.sass
+++ b/styles/resume.module.sass
@@ -72,3 +72,13 @@
         height: 50px
     .info_string_skills_string
         top: 50px
+
+
+.print
+    display: flex
+    flex-direction: row
+    justify-content: center
+    align-items: center
+    gap: 5px
+    padding: 0 20px
+    color: #000
